2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs, GdbSession.cs: Allow setting the active thread.
	  Implemented GetThreads and GetProcesses.
	* ResultData.cs: Handle weird case where a tuple can have several
	  values for a property.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Implemented detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSessionFactory.cs, GdbBacktrace.cs, GdbSession.cs, ResultData.cs:
	  Implemented process attaching, variable query, disassemble.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.Gdb.make, configure, MonoDevelop.Debugger.mdp,
	  MonoDevelop.Debugger.mds, Makefile.include, rules.make,
	  monodevelop.debugger.gdb.pc.in, Makefile: Added missing build
	  files.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, GdbBacktrace.cs, GdbEvent.cs, GdbSession.cs,
	  CommandStatus.cs, GdbSessionFactory.cs, ResultData.cs,
	  GdbCommandResult.cs, Manifest.addin.xml: Initial support for gdb
	  integration.
