@@ -1,3 +1,7 @@
+2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* GdbSession.cs: Track api changes.
+
 2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* GdbBacktrace.cs, GdbSession.cs: Allow setting the active thread.
